# cofkit

./: .gitignore  ACTION_CHECKLIST.md  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  USER_MANUAL.md  environment.yml  pyproject.toml
.github/workflows/: release.yml
agent-docs/: ADDING_LINKAGES_AND_MONOMERS.md  AGENT_CODEBASE_MAP.md  README.md  ZEOPP_CAPABILITY_MAP.md
docs/: ADDING_LINKAGES_AND_MONOMERS.md  AGENT_CODEBASE_MAP.md  BENZOTHIAZOLE_IMPLEMENTATION_PLAN.md  COARSE_VALIDATION.md  COFid_Specification_v1.1.md  COFid_Specification_v1.2.md  CURRENT_SCOPE.md  README.md  TECHNICAL_OVERVIEW.md  WRAPPER_SCRIPTS.md  analysis-validation.md  building.md  calculations.md  external-tools.md  getting-started.md  python-api.md
examples/: build_default_monomers_library.py  classify_batch_output.py  export_mock_imine_cif.py  mock_imine.py  run_available_binary_bridge_batches.py  run_batch_imine_generation.py  run_benzothiazole_candidate_batch.py  run_bex_d2h_case.py  run_binary_bridge_generation.py  run_experimental_examples.py  run_tapb_tfb_hcb_case.py
examples/batch_test_monomers/: aldehydes_count_2.txt  aldehydes_count_3.txt  aldehydes_count_4.txt  aldehydes_count_6.txt  amines_count_2.txt  amines_count_3.txt  amines_count_4.txt  amines_count_6.txt
examples/default_monomers_library/: README.md  aldehydes_count_2.txt  aldehydes_count_3.txt  aldehydes_count_4.txt  aldehydes_count_6.txt  amines_count_2.txt  amines_count_3.txt  amines_count_4.txt  amines_count_6.txt  failures.jsonl  hydrazides_count_2.txt  keto_aldehydes_count_1.txt  keto_aldehydes_count_2.txt  keto_aldehydes_count_3.txt  keto_aldehydes_count_4.txt  registry.jsonl
skills/cofkit-navigator/: SKILL.md
src/cofkit/: __init__.py  _dreiding_reference.py  _version.py  (+48 more)
tests/: test_batch.py  test_build_workflows.py  test_chem.py  test_cif.py  test_cli.py  test_cofid.py  test_core.py  test_decompose.py  test_decompose_cif.py  test_embedding_scoring.py  test_forcefields.py  test_geometry.py  test_graspa.py  test_guest_restart.py  test_hybrid_mdmc.py  test_lammps.py  test_linkage.py  test_post_build_conversions.py  test_rdkit_monomer.py  test_reaction_realization.py  test_topology_analysis.py  test_topology_repository.py  test_validate.py  test_validation.py  test_zeopp.py
tutorials/: 01_environment_and_first_build.ipynb  02_topologies_connectivities_and_linkages.ipynb  03_zeopp_pore_analysis.ipynb  README.md
(+62 files in other folders)
