[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "cofkit"
dynamic = ["version"]
description = "Reaction-aware periodic assembly toolkit for COFs"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Atlas" }
]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
  "gemmi>=0.7",
  "openbabel-wheel",
  "pandas",
  "pymatgen",
  "rdkit",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
cofkit = "cofkit.cli:main"

[tool.hatch.version]
path = "src/cofkit/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/cofkit"]

[tool.hatch.build]
include = [
  "src/cofkit/data/forcefields/**/*.prm",
  "src/cofkit/data/graspa/**/*.def",
  "src/cofkit/data/topologies/**/*.cgd",
  "src/cofkit/data/topologies/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
